force-app/main/default/objects/cgcloud__Query_UI__mdt/cgcloud__Query_UI__mdt.object-meta.xml
<CustomObject>
    <description>Represent each UI Component that corresponds to a Query Definition record.</description>
    <label>Query UI</label>
    <pluralLabel>Query UIs</pluralLabel>
</CustomObject>