force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls visibility of filter in selection grid UI</description>
    <label>DEPRECATED Active</label>
    <type>Checkbox</type>
</CustomField>