force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Client_Side_Data_Source_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Client_Side_Data_Source_Field_Name__c</fullName>
    <inlineHelpText>Indicate the API Field Name from Selection Grid&apos;s Field Columns</inlineHelpText>
    <label>Client Side Data Source Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>