force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Condition_Function__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Function__c</fullName>
    <label>Condition Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>