force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Controls_Inclusion_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Controls_Inclusion_Exclusion__c</fullName>
    <description>Include or Exclude Query Conditions</description>
    <label>Controls Inclusion/Exclusion</label>
    <referenceTo>cgcloud__Query_Condition__mdt</referenceTo>
    <relationshipLabel>Query UIs</relationshipLabel>
    <relationshipName>Query_UIs</relationshipName>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>