force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Dynamic_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Dynamic_Data_Source__c</fullName>
    <label>Dynamic Data Source</label>
    <referenceTo>cgcloud__Query_Definition__mdt</referenceTo>
    <relationshipLabel>Query UIs (Dynamic Data Source)</relationshipLabel>
    <relationshipName>Query_UIs1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>