force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Is_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Custom_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Label</label>
    <type>Checkbox</type>
</CustomField>