force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Is_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will prevent the user from changing the default value.</description>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>