force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Manual_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Data_Source__c</fullName>
    <label>Manual Data Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>