force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Query_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Query_Definition__c</fullName>
    <label>Query Definition</label>
    <referenceTo>cgcloud__Query_Definition__mdt</referenceTo>
    <relationshipLabel>Query UIs</relationshipLabel>
    <relationshipName>Query_UIs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>