force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__UI_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Default_Value__c</fullName>
    <description>Default value (if any) that gets passed into the UI</description>
    <label>UI Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>