force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__UI_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Display_Label__c</fullName>
    <description>Dictates the label that the user will see in the UI Screen</description>
    <inlineHelpText>What the user will see as label on the screen when applicable</inlineHelpText>
    <label>UI Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>