force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__UI_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Display_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Determines the order that the UI Component should be rendered</description>
    <label>UI Display Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>