force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__UI_Output_Parameter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Output_Parameter__c</fullName>
    <label>UI Output Parameter</label>
    <referenceTo>cgcloud__Query_Parameter__mdt</referenceTo>
    <relationshipLabel>Query UIs</relationshipLabel>
    <relationshipName>Query_UIs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>