force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__UI_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Type__c</fullName>
    <label>UI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Multi_Select_Picklist</fullName>
                <label>Multi-Select Picklist</label>
            </value>
            <value>
                <fullName>DatePicker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>