force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Use_Client_Side_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Client_Side_Data_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag that indicates to the Selection Grid that this picklist will only display data that exist on the client side.</description>
    <inlineHelpText>If this option is chosen, this picklist will only be dynamically be populated by one of the columns in the Selection Grid. Dynamic and Manual /Static Data Source will be ignored</inlineHelpText>
    <label>Use Client Side Data Source</label>
    <type>Checkbox</type>
</CustomField>