force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Use_Manual_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Manual_Data_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Manual Data Source</label>
    <type>Checkbox</type>
</CustomField>