force-app/main/default/objects/cgcloud__Query_UI__mdt/fields/cgcloud__Visible__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls visibility of filter in selection grid UI</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>