force-app/main/default/objects/cgcloud__Query_UI__mdt/listViews/cgcloud__Filtered_Tactic_Selection_UI_View.listView-meta.xml
<ListView>
    <fullName>cgcloud__Filtered_Tactic_Selection_UI_View</fullName>
    <columns>cgcloud__UI_Display_Order__c</columns>
    <columns>cgcloud__Is_Custom_Label__c</columns>
    <columns>cgcloud__UI_Display_Label__c</columns>
    <columns>MasterLabel</columns>
    <columns>cgcloud__UI_Type__c</columns>
    <columns>DeveloperName</columns>
    <columns>cgcloud__Controls_Inclusion_Exclusion__c</columns>
    <columns>cgcloud__UI_Output_Parameter__c</columns>
    <columns>cgcloud__Dynamic_Data_Source__c</columns>
    <columns>cgcloud__Manual_Data_Source__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cgcloud__Query_Definition__c</field>
        <operation>equals</operation>
        <value>Filtered_Tactic_Selection_Query</value>
    </filters>
    <label>Filtered Tactic Selection UI View</label>
    <language>en_US</language>
</ListView>